--- a/twitter/tweet/templates/index.html
+++ b/twitter/tweet/templates/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body{
-            background-color: black;
-            color: white;
-        }
-    </style>
-    <title>Document</title>
-</head>
-<body>
-    Test template
-</body>
-</html>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Twitter Home page
+{% endblock  %}
+
+
+{% block content %}
+    <h1 class="text-center mt-4">
+        Welcome to Twitter
+    </h1>
+{% endblock  %}
