--- a/twitter/templates/layout.html
+++ b/twitter/templates/layout.html
@@ -45,6 +45,21 @@
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+
+        <a href="{% url 'tweet_list' %}" class="btn btn-primary mx-2">Home</a>
+        
+
+        {% if user.is_authenticated %}
+        <form action="{% url 'logout' %}" method="POST">
+            {% csrf_token %}
+            <button class="btn bg-danger">Logout</button>
+        </form>
+        {% else %}
+        <a href="{% url 'login' %}" class="btn btn-primary mx-2">Login</a>
+        <a href="{% url 'register' %}" class="btn btn-primary mx-2">Register</a>
+            {% comment %} <a href="{% url 'login' %}" class="btn btn-primary mx-2">Login</a> {% endcomment %}
+        {% endif %}
+
         </div>
     </div>
     </nav>
