--- a/twitter/tweet/templates/tweet_confirm_delete.html
+++ b/twitter/tweet/templates/tweet_confirm_delete.html
@@ -12,8 +12,8 @@
 
     <form method="POST">
         {% csrf_token %}
-        <button type="submit" class="btn-danger">Delete</button>
-        <a class="btn-success" href="{% url 'tweet_list' %}">Cancel</a>
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a class="btn btn-success" href="{% url 'tweet_list' %}">Cancel</a>
     </form>
 
 {% endblock  %}
